# better-mcps

./: .release-please-manifest.json  CODEOWNERS  README.md  pyproject.toml  release-please-config.json
.github/actions/pypi-publish/: action.yml
.github/actions/python-build/: action.yml
.github/actions/python-ci-multi/: action.yml
.github/actions/select-modules/: action.yml  select_modules.py
.github/workflows/: bump-prs.yml  ci-filesystem.yml  ci-reusable.yml  ci.yml  publish-filesystem.yml  publish-reusable.yml  publish.yml  python.yml  release-please.yml  release-train.yml  release.yml  tag-on-merge.yml  tag.yml
filesystem/: CHANGELOG.md  README.md  pyproject.toml
filesystem/src/better_mcps_filesystem/: __init__.py  server.py
scripts/: bump_level.py  release.py  tag_on_merge.py
src/better_filesystem_mcp/: __init__.py
src/filesystem/: README.md
