[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "better-mcps"
version = "0.1.0"
description = "Minimal FastMCP (MCP 2.0) servers that do simple things well."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aron Erdelyi" }]
dependencies = [
  "fastmcp>=2.0.0",
]

[project.scripts]
filesystem = "filesystem.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/filesystem"]
